# agbletor

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/plans/: mlx_to_pytorch_port_d12951c1.plan.md
dinov3/checkpoints/: convert.py  load.py  quantize.py  vits_small.py
dinov3/checkpoints/model/vqa_minicpm/adapter/: README.md  adapter_config.json
dinov3/configs/: config.py
dinov3/models/: __init__.py  vision_transformer.py
heads/detr/: README.md  dataset.py  deformable_attn.py  ffn.py  inference.py  matcher.py  train.py  transformer.py
heads/vqa/: README.md  dataset.py  inference.py  minicpm_loader.py  model.py  train.py
