[project]
name = "dinov3"
version = "0.1.0"
description = "PyTorch DINOv3 with DETR detection and DINOv3+MiniCPM VQA heads"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers",
    "matplotlib",
    "numpy",
    "pillow",
    "scipy",
    "pycocotools",
    "tqdm",
    "pyyaml",
    "safetensors",
    "datasets",
    "nltk",
    "peft",
    "accelerate",
]
